--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.8.0",
     "@expo/vector-icons": "^14.1.0",
+    "@mui/icons-material": "^7.3.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -33,15 +35,19 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "node-libs-expo": "^0.0.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "expo-crypto": "~14.1.5"
   },
   "compilerOptions": {
     "target": "esnext",
